Configuracion de una BD oracle y una MySQL

--- a/spring-boot-sample/spring-boot-admin-rest-jpa-multiple/src/main/resources/application.properties
+++ b/spring-boot-sample/spring-boot-admin-rest-jpa-multiple/src/main/resources/application.properties
@@ -1,12 +1,11 @@
-datasource.db1.url=jdbc:mysql://127.0.0.1:3306/bd1
-datasource.db1.username=root
-datasource.db1.password=root
-datasource.db1.driver-class-name=com.mysql.jdbc.Driver
+datasource.db1.url=jdbc:oracle:thin:@//172.16.4.97:1525/oracle
+datasource.db1.username=oracle
+datasource.db1.password=oracle
+datasource.db1.driver-class-name=oracle.jdbc.OracleDriver
 
-datasource.db2.url=jdbc:mysql://172.16.4.31:3308/db2
-datasource.db2.username=EUSJ9999
-datasource.db2.password=BR1416ESJ
+datasource.db2.url=jdbc:mysql://172.16.4.31:3308/mysql
+datasource.db2.username=mysql
+datasource.db2.password=mysql
 datasource.db2.driver-class-name=com.mysql.jdbc.Driver
 
 spring.jpa.show-sql = true
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
