--- a/spring-boot-sample/spring-boot-admin-rest-jpa-multiple/pom.xml
+++ b/spring-boot-sample/spring-boot-admin-rest-jpa-multiple/pom.xml
@@ -43,6 +43,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+            <groupId>com.oracle</groupId>
+            <artifactId>ojdbc14</artifactId>
+            <version>10.2.0.5</version>
+        </dependency>
 	</dependencies>
 
 	<build>
